--- a/frontend_energy/src/Styles/Register.css
+++ b/frontend_energy/src/Styles/Register.css
@@ -2,7 +2,7 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
 
 body {
-    background-color: #1a1a2e;
+    background-color: #F9F9F9;
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
